# lib/api-spec/openapi.yaml
@@ -1101,7 +1101,7 @@ paths:
                 items:
                   $ref: "#/components/schemas/AlertDeliveryResult"
 
-  /push/devices:
+  /sme/push/devices:
     get:
       operationId: listPushDevices
       tags: [sme]
@@ -1137,7 +1137,7 @@ paths:
         "401":
           $ref: "#/components/responses/Unauthorized"
 
-  /push/devices/unregister:
+  /sme/push/devices/unregister:
     post:
       operationId: unregisterPushDevice
       tags: [sme]
